--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
+    "@types/styled-components": "^5.1.23",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "babel-plugin-styled-components": "^2.0.5",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.4.0",
@@ -44,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
+    "jest-styled-components": "^7.0.8",
     "lint-staged": "^12.3.4",
     "prettier": "2.5.1",
     "typescript": "^4.5.4"
