--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "jest --watch",
+    "generate": "plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook -s ./public"
   },
@@ -55,6 +56,7 @@
     "jest": "^27.5.1",
     "jest-styled-components": "^7.0.8",
     "lint-staged": "^12.3.4",
+    "plop": "^3.0.5",
     "prettier": "2.5.1",
     "typescript": "^4.5.4"
   }
