--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           node_version: 14.x
 
       - name: Install dependencies
-        run: npm run install
+        run: npm install
 
       - name: Linting
         run: npm run lint
